--- a/api/src/config/config.json
+++ b/api/src/config/config.json
@@ -1,14 +1,11 @@
 {
   "development": {
     "dialect": "sqlite",
-    "storage": "./src/database/database.sqlite"
+    "storage": "./src/database/teste.sqlite"
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "sqlite",
+    "storage": "./src/database/teste.sqlite"
   },
   "production": {
     "username": "root",
