--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
     "sequelize": "^6.37.4",
     "sequelize-cli": "^6.6.2",
     "sqlite": "^5.1.1",
